k8s/bases/fib-app/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fib-app
  labels: {}
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector: {}
